Initial commit for new repo

--- a/cmd/registery/config.json
+++ b/cmd/registery/config.json
@@ -1,9 +1,9 @@
 {
-  "NodeCount": 250,
+  "NodeCount": 2,
   "EpochSeed": "AQIDBAU=",
-  "EndRound": 11,
-  "GossipFanout": 8,
-  "LeaderCount" : 4,
-  "BlockSize": 8000000,
-  "BlockChunkCount": 128
+  "EndRound": 5,
+  "GossipFanout": 1,
+  "LeaderCount" : 1,
+  "BlockSize": 512,
+  "BlockChunkCount": 4
 }
